Fix for PrettyPhoto on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14341,7 +14341,7 @@ ul.nostyle i {
   color: #fff;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1023px) {
   .portfolio-info {
     display: none;
   }
